--- a/ML/transcription.ipynb
+++ b/ML/transcription.ipynb
@@ -21,31 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# audio_file= open(\"/Users/joankadevi/Downloads/testingloudness.m4a\", \"rb\")\n",
     "\n",
-    "audio_file_path = \"./audio/audio.mp3\"\n",
+    "audio_file_path = \"./audio/ulfJXy4QptQ.mp3\"\n",
     "audio_file = open(audio_file_path, \"rb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "transcription = client.audio.transcriptions.create(\n",
     "  model=\"whisper-1\", \n",
-    "  file=audio_file\n",
+    "  file=audio_file,\n",
+    "  response_format= \"srt\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +59,320 @@
    ],
    "source": [
     "print(transcription.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_transcription(transcription):\n",
+    "    blocks = transcription.split('\\n\\n')\n",
+    "    processed_lines = []\n",
+    "    for block in blocks:\n",
+    "        lines = block.split('\\n')\n",
+    "        if len(lines) >= 3:\n",
+    "            time_range = lines[1]\n",
+    "            text = lines[2]\n",
+    "            start_time = time_range.split(' --> ')[0]\n",
+    "            # Convert the time format from \"00:00:00,000\" to \"0:00:00\"\n",
+    "            formatted_start_time = start_time[:-4]\n",
+    "            processed_line = f\"[{formatted_start_time}]{text}\"\n",
+    "            processed_lines.append(processed_line)\n",
+    "    return (processed_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[00:00:00]Here comes Aaron Gordon the other way.',\n",
+       " '[00:00:03]Gordon, oh my goodness!',\n",
+       " '[00:00:07]Oh!',\n",
+       " '[00:00:09]And are they calling that an offensive foul?',\n",
+       " \"[00:00:11]An offensive foul, there's no challenge left.\",\n",
+       " '[00:00:15]Winner takes a 3-2 lead in this opening round series.',\n",
+       " '[00:00:18]Morant, oh!',\n",
+       " '[00:00:20]A jawbreaker!',\n",
+       " '[00:00:23]Oh!',\n",
+       " '[00:00:26]From beyond the arc.',\n",
+       " '[00:00:28]Ross!',\n",
+       " '[00:00:29]Throw it down!',\n",
+       " '[00:00:31]Throw it down, Ross!',\n",
+       " '[00:00:33]Down the middle he goes!',\n",
+       " '[00:00:36]Fresh 14 for the Lakers.',\n",
+       " '[00:00:38]LeBron!',\n",
+       " '[00:00:39]Look out below!',\n",
+       " '[00:00:40]Oh my lord!',\n",
+       " '[00:00:42]Oh my lord!',\n",
+       " '[00:00:45]In fact, somebody just spilled a beer all over us.',\n",
+       " '[00:00:49]Brunson defends, snaps it outside to Wiggins.',\n",
+       " '[00:00:52]Oh!',\n",
+       " '[00:00:54]Drops the sledgehammer!',\n",
+       " \"[00:00:56]But there's an open away!\",\n",
+       " '[00:00:58]They call it an offensive foul!',\n",
+       " '[00:01:03]Rebound by Adams, his sixth.',\n",
+       " '[00:01:05]Morant blows by Primo.',\n",
+       " '[00:01:07]Attack!',\n",
+       " '[00:01:08]Oh!',\n",
+       " '[00:01:09]Holy cow!',\n",
+       " '[00:01:10]That is unbelievable!',\n",
+       " '[00:01:15]The bench still stands.',\n",
+       " '[00:01:17]Adams going long.',\n",
+       " '[00:01:18]Morant!',\n",
+       " '[00:01:20]He hit it!',\n",
+       " '[00:01:21]He hit it!',\n",
+       " '[00:01:22]He hit it!',\n",
+       " '[00:01:23]He hit it!',\n",
+       " '[00:01:24]John Morant, insanity!',\n",
+       " '[00:01:28]Nothing shocks me about this game.',\n",
+       " '[00:01:30]And that drew rim!',\n",
+       " \"[00:01:31]It's still loose!\",\n",
+       " '[00:01:32]Luka got it back!',\n",
+       " '[00:01:33]He did it!',\n",
+       " '[00:01:34]He did it!',\n",
+       " '[00:01:35]He did it!',\n",
+       " '[00:01:36]An improbable comeback by Dallas to tie it with one second left!',\n",
+       " \"[00:01:42]They've got Curry.\",\n",
+       " '[00:01:43]He checked it.',\n",
+       " '[00:01:44]Steps.',\n",
+       " '[00:01:46]For the win!',\n",
+       " '[00:01:47]Yes sir!',\n",
+       " '[00:01:49]His eighth career game winner!',\n",
+       " \"[00:01:54]Let's do it!\",\n",
+       " '[00:01:55]Cleveland!',\n",
+       " \"[00:01:56]Let's do it in Cleveland!\",\n",
+       " '[00:01:57]Cleveland!',\n",
+       " '[00:01:58]This is for you!',\n",
+       " '[00:01:59]Got it!',\n",
+       " '[00:02:00]Got it!',\n",
+       " \"[00:02:02]That's a winner!\",\n",
+       " '[00:02:05]Cleveland!',\n",
+       " '[00:02:06]Cleveland!',\n",
+       " '[00:02:07]This is for you!',\n",
+       " '[00:02:12]They still have it.',\n",
+       " '[00:02:14]And they steal it!',\n",
+       " '[00:02:15]They steal it away!',\n",
+       " \"[00:02:17]It's Russ!\",\n",
+       " '[00:02:18]Russ to tie the game!',\n",
+       " \"[00:02:20]He's got it!\",\n",
+       " '[00:02:21]Russ has got it!',\n",
+       " \"[00:02:23]We're tied!\",\n",
+       " \"[00:02:28]We weren't even sure Jalen Brunson was going to play tonight.\",\n",
+       " '[00:02:30]Hurt his foot on Sunday.',\n",
+       " '[00:02:32]And he comes up with a 30 point game despite being questionable coming in.',\n",
+       " '[00:02:37]A homecoming for Brunson.',\n",
+       " '[00:02:39]He just put the Bulls away with a triple.',\n",
+       " '[00:02:44]23!',\n",
+       " '[00:02:45]23!',\n",
+       " '[00:02:46]22!',\n",
+       " '[00:02:47]23!',\n",
+       " '[00:02:48]Thomas.',\n",
+       " '[00:02:49]To Durant.',\n",
+       " '[00:02:50]The fake.',\n",
+       " '[00:02:51]The second.',\n",
+       " '[00:02:52]Oh!',\n",
+       " '[00:02:53]Ankle breaker!',\n",
+       " '[00:02:54]KD!',\n",
+       " \"[00:02:59]Well I said it wasn't going to be easy tonight.\",\n",
+       " '[00:03:01]I think this is a prime example of just that.',\n",
+       " '[00:03:04]With a gaffer and a spin cycle for easy two.',\n",
+       " '[00:03:07]Stunning.',\n",
+       " '[00:03:09]27 point lead.',\n",
+       " '[00:03:10]Down goes Johnson.',\n",
+       " '[00:03:12]Oh no.',\n",
+       " '[00:03:13]Oh no.',\n",
+       " \"[00:03:14]They're shredding him!\",\n",
+       " \"[00:03:15]Oh no he didn't.\",\n",
+       " '[00:03:17]Luka Doncic is absolutely putting on a show here.',\n",
+       " '[00:03:23]In the Western Conference.',\n",
+       " '[00:03:24]And they back it up.',\n",
+       " \"[00:03:26]It's over.\",\n",
+       " '[00:03:28]Pelz.',\n",
+       " '[00:03:29]No, no, no.',\n",
+       " '[00:03:30]Get it done.',\n",
+       " '[00:03:31]And on the spin and the reverse.',\n",
+       " '[00:03:34]The slam buys on.',\n",
+       " \"[00:03:37]I know you didn't like it.\",\n",
+       " '[00:03:40]Before that.',\n",
+       " '[00:03:41]We knew he was good.',\n",
+       " '[00:03:43]Oh!',\n",
+       " '[00:03:45]What vision.',\n",
+       " '[00:03:46]Perfect.',\n",
+       " '[00:03:47]Off to the races.',\n",
+       " '[00:03:48]What do you got?',\n",
+       " '[00:03:49]Yeah!',\n",
+       " \"[00:03:51]Here's Carter.\",\n",
+       " '[00:03:52]Stolen by Doncic.',\n",
+       " '[00:03:54]Could be fun.',\n",
+       " '[00:03:55]Doncic to the left!',\n",
+       " '[00:03:58]Hold on!',\n",
+       " \"[00:03:59]That's in his bag as well.\",\n",
+       " \"[00:04:04]Of course it's going to be Simons.\",\n",
+       " '[00:04:06]Oh!',\n",
+       " '[00:04:07]Wow!',\n",
+       " '[00:04:08]Wow!',\n",
+       " '[00:04:09]Sharp!',\n",
+       " \"[00:04:12]Now that's a highlight.\",\n",
+       " \"[00:04:15]We're tied at 1.23.\",\n",
+       " '[00:04:17]Five seconds left.',\n",
+       " '[00:04:19]Fox.',\n",
+       " '[00:04:20]Rising.',\n",
+       " '[00:04:22]35 footer.',\n",
+       " \"[00:04:23]It's good.\",\n",
+       " \"[00:04:25]And Sacramento a walk-off three from De'Aaron Fox.\",\n",
+       " '[00:04:31]An absolute heartbreaker.',\n",
+       " '[00:04:34]Simply incredible basketball team.',\n",
+       " '[00:04:37]Doncic is missing the jumper there.',\n",
+       " \"[00:04:39]It doesn't get easier.\",\n",
+       " '[00:04:41]Oh!',\n",
+       " '[00:04:42]Short and cool.',\n",
+       " '[00:04:44]What a move there.',\n",
+       " \"[00:04:46]I'm getting all the way to the rim.\",\n",
+       " \"[00:04:47]I don't care who's in front of me.\",\n",
+       " \"[00:04:49]I'm going to make whatever move I have to.\",\n",
+       " '[00:04:54]Drake comes up with it.',\n",
+       " '[00:04:56]Head rolls it in.',\n",
+       " '[00:05:00]How about that?',\n",
+       " '[00:05:02]That might be the send-off.',\n",
+       " '[00:05:03]The only thing left now is to get...',\n",
+       " '[00:05:07]Celtics have a timeout.',\n",
+       " '[00:05:08]Decide not to use it here.',\n",
+       " '[00:05:10]Brown the drive.',\n",
+       " '[00:05:12]Jalen Brown kicks it out.',\n",
+       " '[00:05:14]Smart fakes.',\n",
+       " '[00:05:16]Inside.',\n",
+       " '[00:05:17]Tatum spins and he puts it on!',\n",
+       " '[00:05:32]They got to go.',\n",
+       " \"[00:05:34]It's Kane.\",\n",
+       " '[00:05:35]Johnson for the win!',\n",
+       " '[00:05:49]Draymond Green actually leaving the court.',\n",
+       " \"[00:05:51]He's upset.\",\n",
+       " '[00:05:52]Moran from half court.',\n",
+       " '[00:05:53]Oh!',\n",
+       " '[00:05:54]He puts it in!',\n",
+       " '[00:05:55]John Moran from half court at the buzzer!',\n",
+       " '[00:06:02]Launches.',\n",
+       " '[00:06:03]Oh!',\n",
+       " '[00:06:05]Money!',\n",
+       " '[00:06:11]Brown puts up the three.',\n",
+       " '[00:06:13]Off the mark.',\n",
+       " '[00:06:14]Rebound Wiggins.',\n",
+       " \"[00:06:15]He's got three seconds to get a shot off.\",\n",
+       " '[00:06:17]Wiggins to Poole.',\n",
+       " '[00:06:18]Poole gets it off in time.',\n",
+       " '[00:06:19]Oh!',\n",
+       " '[00:06:20]He banks it in!',\n",
+       " '[00:06:21]He banks it in!',\n",
+       " '[00:06:22]They count it as the buzzer sounds.',\n",
+       " '[00:06:26]Oh!',\n",
+       " '[00:06:33]Mitchell whirls in the basket and thunders it home!',\n",
+       " '[00:06:40]Oh!',\n",
+       " '[00:06:41]How did he do it?',\n",
+       " '[00:06:43]Daniel Gafford.',\n",
+       " \"[00:06:45]It's not over.\",\n",
+       " '[00:06:46]LeBron James comes right back.',\n",
+       " \"[00:06:50]I'll tell you what.\",\n",
+       " \"[00:06:51]The fans got their money's worth tonight.\",\n",
+       " '[00:06:54]McDermott having problems.',\n",
+       " \"[00:06:57]Green's got a hand on it.\",\n",
+       " '[00:06:58]Three on one.',\n",
+       " '[00:06:59]Rust!',\n",
+       " '[00:07:00]LeBron!',\n",
+       " '[00:07:01]Rust to LeBron!',\n",
+       " '[00:07:03]What did LeBron do with it?',\n",
+       " '[00:07:05]I mean, you talk about throwing it down.',\n",
+       " \"[00:07:07]That's what you call throwing it down.\",\n",
+       " '[00:07:13]But Mitchell was able to break it up.',\n",
+       " '[00:07:15]Here comes Dinwiddie!',\n",
+       " \"[00:07:16]Cockin' it big!\",\n",
+       " '[00:07:18]A Titanic finish!',\n",
+       " '[00:07:21]Turn over.',\n",
+       " \"[00:07:23]Here's Jalen.\",\n",
+       " '[00:07:24]Oh!',\n",
+       " '[00:07:25]He ascends and lands on top of Kleba after he smashes it.',\n",
+       " '[00:07:31]And then he says a hello to Kevin Garnett.',\n",
+       " '[00:07:34]Way outside near the arc.',\n",
+       " '[00:07:36]Green may angle something toward the rim.',\n",
+       " '[00:07:38]He gives it to Ibiza.',\n",
+       " \"[00:07:39]He'll turn.\",\n",
+       " '[00:07:40]Got it!',\n",
+       " '[00:07:41]Oh my!',\n",
+       " \"[00:07:42]They're gonna count the bucket!\",\n",
+       " '[00:07:44]But review.',\n",
+       " '[00:07:46]Ibiza catch a turn and shot!',\n",
+       " '[00:07:51]Finds Barrett.',\n",
+       " '[00:07:52]Get a shot up.',\n",
+       " '[00:07:53]This is for the win!',\n",
+       " '[00:07:54]Oh!',\n",
+       " \"[00:07:55]It's gone off the window!\",\n",
+       " '[00:07:59]RJ Barrett wins it for the Knicks!',\n",
+       " \"[00:08:05]Here's Young.\",\n",
+       " '[00:08:06]Sizes up Gibson.',\n",
+       " '[00:08:07]Around him.',\n",
+       " '[00:08:08]Shoots and hits!',\n",
+       " '[00:08:11]Trey Young taking the Knicks hard yet again.',\n",
+       " '[00:08:15]And their ankles.',\n",
+       " '[00:08:19]Avery Bradley with the deflection against Bain.',\n",
+       " '[00:08:22]Oh my God!',\n",
+       " \"[00:08:23]That you're gonna ever see.\",\n",
+       " \"[00:08:25]Yeah, Bain's the initial defender and he blocks it with two hands.\",\n",
+       " '[00:08:31]The outlet intended for Moran ends up in the hands of Graham.',\n",
+       " '[00:08:34]Jackson Hayes!',\n",
+       " '[00:08:39]And one foul called on Adams.',\n",
+       " '[00:08:45]He and his game are.',\n",
+       " '[00:08:47]Yang the offensive rebound.',\n",
+       " '[00:08:49]Oh!',\n",
+       " '[00:08:50]Bain!',\n",
+       " '[00:08:54]Clear some space!',\n",
+       " '[00:08:56]Warriors with a lead.',\n",
+       " '[00:08:58]Thompson just the two points.',\n",
+       " '[00:09:00]This team traveling.',\n",
+       " '[00:09:01]Oh!',\n",
+       " '[00:09:02]Exploding to the rim!',\n",
+       " '[00:09:04]Clay Thompson powers one down.',\n",
+       " '[00:09:09]Way ahead to Van Karel.',\n",
+       " '[00:09:11]Van Karel way up and throws it down.',\n",
+       " '[00:09:21]Russ.',\n",
+       " \"[00:09:22]It'll count!\",\n",
+       " '[00:09:23]He hits it again!',\n",
+       " '[00:09:25]Count it, Russ!',\n",
+       " \"[00:09:29]Milwaukee's gone plus 15 since.\",\n",
+       " '[00:09:31]A lead by one.',\n",
+       " '[00:09:32]Series tied at two apiece.',\n",
+       " '[00:09:34]Marcus Smart goes to the rack.',\n",
+       " '[00:09:36]And blocked by Drew Holliday!',\n",
+       " '[00:09:38]He throws it off Smart.',\n",
+       " '[00:09:39]Milwaukee ball!',\n",
+       " '[00:09:41]What a play by Drew Holliday!',\n",
+       " '[00:09:44]That is a great defensive play there.',\n",
+       " '[00:09:48]Coming off to help.',\n",
+       " \"[00:09:50]Connaughton's beat.\",\n",
+       " '[00:09:52]Drew Holliday not only.',\n",
+       " \"[00:09:53]If I'm Milwaukee, I'm not letting this ball get up the floor.\",\n",
+       " \"[00:09:56]I'm taking a foul.\",\n",
+       " '[00:09:57]And Horford gives it to Smart.',\n",
+       " '[00:09:59]Smart.',\n",
+       " \"[00:10:00]He's picked by Holliday!\",\n",
+       " \"[00:10:02]And that's gonna do it!\",\n",
+       " '[00:10:04]Milwaukee!',\n",
+       " '[00:10:05]A comeback win on the road!',\n",
+       " '[00:10:08]They win it 1-10, 1-0-7.',\n",
+       " '[00:10:12]And Milwaukee leads this best of seven series.']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process_transcription(transcription)"
    ]
   }
  ],
