update transcription and caption dictionaries

--- a/ML/transcription.ipynb
+++ b/ML/transcription.ipynb
@@ -605,6 +605,254 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('./results/captions.json') as json_file:\n",
+    "    captions_dict = json.load(json_file)\n",
+    "with open('./results/transcription.json') as json_file:\n",
+    "    transcription_dict = json.load(json_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0:00:00': 'What up everybody, how you guys doing today? Alrighty guys, this is really going to be a weird one.',\n",
+       " '0:00:05': \"So I've never done a video like this before.\",\n",
+       " '0:00:10': \"I've always got suggested this. But, like, I just didn't know if I really wanted to do it or not.\",\n",
+       " '0:00:15': \"Today, we're going to be vlogging for 15 minutes straight.\",\n",
+       " '0:00:20': 'Without any cuts. Oh, this could go very wrong.',\n",
+       " '0:00:25': \"Anyway, I'm over at my parents' house right now. Let's go inside and see what's up with everybody.\",\n",
+       " '0:00:30': \"Oh yeah, not only is there no cuts, but there's, like, no edits either.\",\n",
+       " '0:00:35': \"This is just, like, the rawest form of video I have ever posted in my life. But let's go say what up.\",\n",
+       " '0:00:40': 'Hello. Oh! You got me!',\n",
+       " '0:00:45': \"Hi, Gio. Look, my dad's scaring me.\",\n",
+       " '0:00:50': \"Oh my gosh. This is my family. This is my life. Welcome. Where's grandma at?\",\n",
+       " '0:00:55': \"Why are you bothering us? I'm bothering you. Hi.\",\n",
+       " '0:01:00': 'What up, girl? How you doing?',\n",
+       " '0:01:05': 'Finally. Yeah.',\n",
+       " '0:01:10': \"I'm coming, Gio. What, boy?\",\n",
+       " '0:01:15': \"Look, he comes inside and he's still dripping pee. Why don't you just pee while you're out there?\",\n",
+       " '0:01:20': 'Wow. You paid that specific bill? Yeah.',\n",
+       " '0:01:25': \"Oh, gosh. We're all goofs in here.\",\n",
+       " '0:01:30': 'Missing bulbs. What?',\n",
+       " '0:01:35': \"Girl, they're all in.\",\n",
+       " '0:01:40': 'Yeah, there was never.',\n",
+       " '0:01:45': \"I'm so confused. We're so confused. There was bulbs missing earlier.\",\n",
+       " '0:01:50': 'There was not. Yes, there was. We had bulbs yesterday. It was done.',\n",
+       " '0:01:55': \"It was not. You're a liar. Hello. Hi.\",\n",
+       " '0:02:00': \"Hi. Oh, you're not answering that? No, we got the 15 minutes of vlog. What do we have?\",\n",
+       " '0:02:05': \"We have two minutes, people. This is interesting. You know what's really weird?\",\n",
+       " '0:02:10': 'I used to vlog all the time with absolutely no cuts.',\n",
+       " '0:02:15': 'Oh my gosh. What? Did you throw something at me? Yes, you did me.',\n",
+       " '0:02:20': 'Asshole. What happened? What is it? He threw something over the boat.',\n",
+       " '0:02:25': \"What did you throw at me? You're an asshole.\",\n",
+       " '0:02:30': \"Come on, I'm trying to find furniture.\",\n",
+       " '0:02:35': \"What are you getting now? It's not big enough. Oh, my mom is sending her couch back because it's not big enough.\",\n",
+       " '0:02:40': 'I can just take it off your hands if you want.',\n",
+       " '0:02:45': 'Here, you want a boner?',\n",
+       " '0:02:50': 'What? You want to buy something? How much is it? Three. Three?',\n",
+       " '0:02:55': \"Three dollars? I'm down. Obviously, it's more than that. It would look nicer in your place.\",\n",
+       " '0:03:00': \"It would. I think it'll look really nice in that room that we have no furniture in now.\",\n",
+       " '0:03:05': \"I think it's phenomenal. What? I don't get it.\",\n",
+       " '0:03:10': \"I don't know. I'm not really making any money right now. I got to relax on the spending. I'm going to let you go on.\",\n",
+       " '0:03:15': 'I spent a lot of money. I said you let her go on.',\n",
+       " '0:03:20': 'I just paid the electric.',\n",
+       " '0:03:25': \"I just can't cut. No, we can't. No cuts today. What are you doing?\",\n",
+       " '0:03:30': \"This video is totally out of focus right now. I apologize, guys. There's this setting on my camera, and if I tap the screen, it goes completely out of focus.\",\n",
+       " '0:03:35': 'No caption',\n",
+       " '0:03:40': \"Obviously, I can't cut this. I can't really restart or fix it.\",\n",
+       " '0:03:45': \"We're going to have to deal with a little bit of blurriness.\",\n",
+       " '0:03:50': \"I'm trying to fix it, though, if I can center it. I need a motorcycle fairing for my bike.\",\n",
+       " '0:03:55': 'A what? A motorcycle fairing on my bike. What is a fairing? What? What are you saying?',\n",
+       " '0:04:00': 'Say what? What? Fairing. What did you just say? Motorcycle fairing.',\n",
+       " '0:04:05': 'Fairing? What did you say? Fairing? What is this word?',\n",
+       " '0:04:10': \"It's a windshield, a fairing. Oh, fairing. I still don't know what that is.\",\n",
+       " '0:04:15': 'Gio.',\n",
+       " '0:04:20': 'Gio, you want to be in the vlog?',\n",
+       " '0:04:25': 'You want to be in the vlog? What? What do you want?',\n",
+       " '0:04:30': \"What do you want? He wants a treat, don't you? Is that what you want? Oh, yeah, he's going to the closet.\",\n",
+       " '0:04:35': 'All right, this dog is the pickiest dog ever. Watch this, okay?',\n",
+       " '0:04:40': 'What kind of treat do you want, Gio? We got...',\n",
+       " '0:04:45': \"He'll never accept any of these treats. He's so picky. Come here.\",\n",
+       " '0:04:50': \"You want this? Look, he'll smell it, and he won't take it. See? What is he doing?\",\n",
+       " '0:04:55': \"He'll do that with every single treat. We've learned a trick. Just give him a treat, and if he doesn't accept it, just leave it there.\",\n",
+       " '0:05:00': \"He'll eventually come back and take it.\",\n",
+       " '0:05:05': \"Ooh, what do we got over here? Is this brownies? Oh, that's not a brownie.\",\n",
+       " '0:05:10': \"Ribs. I don't know why I thought that looked like a brownie.\",\n",
+       " '0:05:15': \"That's not brownies. That's meat. Some chicken. Ooh.\",\n",
+       " '0:05:20': \"Huh? Gio, what do you think? Black leather. Black leather? I'm so upset because, like, this actually looks so nice,\",\n",
+       " '0:05:25': \"and it feels so comfy, too. It's velvet.\",\n",
+       " '0:05:30': \"Here's my issue. In order for me to get the extensions,\",\n",
+       " '0:05:35': \"I have to send the whole thing back and order it. They won't just send me the replacement parts, which would be so easier.\",\n",
+       " '0:05:40': \"Yeah. You believe that? It's only two pieces, single pieces, and they won't send it to me.\",\n",
+       " '0:05:45': \"That's weird. Dad won't send my stuff to your house, babe.\",\n",
+       " '0:05:50': 'I know. I just keep insisting on me getting it over there. What are you going to do with all your friends to take it over?',\n",
+       " '0:05:55': \"Well, Grandma, how about you move into my house? No, I'm fine with where I'm at today.\",\n",
+       " '0:06:00': \"Grandma don't want to come over there. You guys know why.\",\n",
+       " '0:06:05': \"Grandma's going to constantly be getting, I guess, the word to use is harassed by me every day.\",\n",
+       " '0:06:10': \"She's got it made right now. I know. She sits in that room.\",\n",
+       " '0:06:15': \"Actually, nobody bothers me over there. I have to put up with you shenanigans. I know. At least you can lock the door over here, and you don't got to hear me at all.\",\n",
+       " '0:06:20': 'You got to put up with the me-heads. The me-heads. I have to beat somebody the fuck up.',\n",
+       " '0:06:25': \"Mom, we're family friendly. Yeah, this video is not family friendly at all.\",\n",
+       " '0:06:30': \"We're more than that. I only curse one time. We're beyond family friendly.\",\n",
+       " '0:06:35': \"Well, I don't know. It is what it is. But it will look nice over here, mate. It's a really good one.\",\n",
+       " '0:06:40': \"No, I know it would. It's beautiful, son. I can't afford it right now. I know.\",\n",
+       " '0:06:45': \"Yeah, your boy's going broke. Everybody get the merch. Lance210.com.\",\n",
+       " '0:06:50': \"Merch link in bio. Make payment arrangements. Payment arrangements. Yeah, Mom, I'll give you $75 a month for, what would that be like?\",\n",
+       " '0:06:55': 'In a couple years.',\n",
+       " '0:07:00': \"Yeah, I'll collect. You'll collect? That's 33%. On a dollar.\",\n",
+       " '0:07:05': 'On a dollar? Did you just say cut? Cut that out.',\n",
+       " '0:07:10': \"I can't cut anything. You have to. Why? What? Don't.\",\n",
+       " '0:07:15': \"Move on. Move on. I'm so confused right now. See, this is the thing. I can't cut nothing.\",\n",
+       " '0:07:20': 'What? What, Gio? What, Gio? Get him.',\n",
+       " '0:07:25': \"Get him. Put my baby down. It's okay. Here, I got your blanket right here.\",\n",
+       " '0:07:30': \"Put him down. Put him down. Gio, pee on the new couch. No. It's going to be your couch, so why are you talking to me on it?\",\n",
+       " '0:07:35': \"It's not my couch. I didn't confirm or deny. Yes, you did.\",\n",
+       " '0:07:40': 'You almost did. I almost did. Somebody power in. Just order a different one. Yeah, somebody can send what she needs.',\n",
+       " '0:07:45': \"Look, we're in the couch. You got to cover it already. Well, we'll cover it because the dog lays on it.\",\n",
+       " '0:07:50': \"Yeah, we don't. Think of your mother. Huh? Think of your mother. What about my mother?\",\n",
+       " '0:07:55': \"I don't want to pay for it.\",\n",
+       " '0:08:00': \"Grandma, I'm not cheap. I'm being smart with my money. Hence, why I haven't been buying anything lately.\",\n",
+       " '0:08:05': \"Like, literally, the most amount of money I spent this month has been on food for the past couple months, I'd say.\",\n",
+       " '0:08:10': \"I have to say, I'm proud of you. You really did well the last two months.\",\n",
+       " '0:08:15': 'You spent less money in the last two months than I think in the last five years, like',\n",
+       " '0:08:20': 'ever, on one month period. There were times you were spending...',\n",
+       " '0:08:25': 'A little too much. Double. Like, you were spending like... Double. No, like, even more than that.',\n",
+       " '0:08:30': \"I was probably 10, 20 times that. Yeah, I've been very cautious with my spending lately.\",\n",
+       " '0:08:35': \"Just trying to... I mean, look, there's no need to spend ridiculous amounts of money.\",\n",
+       " '0:08:40': \"I'm just saving it. And, you know, one day when I retire, I'll have my money and that's it.\",\n",
+       " '0:08:45': 'Always save for a rainy day. Yes.',\n",
+       " '0:08:50': \"That's something I've always been good at, honestly. Even when I was a little kid, Mom, right? I would always save my money.\",\n",
+       " '0:08:55': 'And Sabrina would always spend her money. And I would save it. And I would always steal it all from you.',\n",
+       " '0:09:00': 'Yes, she would try to. You used to actually put his money in the bank. The change.',\n",
+       " '0:09:05': 'Remember the change? You used to take... What? The change out of the containers. That was when we had the thing for Disney.',\n",
+       " '0:09:10': 'The big door thing. We would make everybody put the change in.',\n",
+       " '0:09:15': \"It was like our Disney money. The kids would always put all the change they would find in there. Don't you remember that? Yeah, I had my own little piggy bank, too.\",\n",
+       " '0:09:20': 'But I just had my little lump of change and dollars. And I would always just save up.',\n",
+       " '0:09:25': 'And I would never spend it. I just really like to save.',\n",
+       " '0:09:30': 'What? What, boy? I know you want to say something.',\n",
+       " '0:09:35': \"You're so cute. Where's your friend? Where's Spark? Spark's downstairs. Let's go get him.\",\n",
+       " '0:09:40': 'No. No. What? What? Is he sleeping?',\n",
+       " '0:09:45': \"He's sleeping. Gio. He's telling you no. Gio. He's telling you no.\",\n",
+       " '0:09:50': 'Because you know everything. Gio protects him.',\n",
+       " '0:09:55': \"He takes naps around this time because Sabrina goes out. And then when she comes back, he's up all night running around playing.\",\n",
+       " '0:10:00': \"With Spark. I'm glad I took that light out.\",\n",
+       " '0:10:05': \"It looks nice. Yeah, you're missing 12 bulbs apparently, Grandma says.\",\n",
+       " '0:10:10': \"Grandma, I don't understand why you just don't walk down the stairs. You've been up there the whole time. I'm comfortable right where I'm at.\",\n",
+       " '0:10:15': \"Well, I'll walk upstairs for you. No, no, no.\",\n",
+       " '0:10:20': \"It's okay. It's okay. I got an idea.\",\n",
+       " '0:10:25': 'Yo, Dad. Come here. Come here.',\n",
+       " '0:10:30': 'Where is it?',\n",
+       " '0:10:35': 'Is it in here?',\n",
+       " '0:10:40': \"We're getting the air horn. Oh. Open it up.\",\n",
+       " '0:10:45': \"I don't know what she's saying. She's saying no to me.\",\n",
+       " '0:10:50': \"I think she's talking to Gio. What?\",\n",
+       " '0:10:55': \"I'm not doing nothing.\",\n",
+       " '0:11:00': 'Did you get it?',\n",
+       " '0:11:05': \"Let me see. I'm going to go get her.\",\n",
+       " '0:11:10': 'No caption',\n",
+       " '0:11:15': 'Grandma. What are you doing?',\n",
+       " '0:11:20': 'Oh, no.',\n",
+       " '0:11:25': 'No caption',\n",
+       " '0:11:30': \"She's still waiting. I'm not doing it anymore.\",\n",
+       " '0:11:35': \"No, I'm not doing it.\",\n",
+       " '0:11:40': 'Here you go. You can hold it. What do you got?',\n",
+       " '0:11:45': 'Crystals on your fingers? Your rings? What are you talking about? Is that a crystal? Yeah.',\n",
+       " '0:11:50': \"It's a stone. No, these are crystals. Yeah. Yeah, they look nice.\",\n",
+       " '0:11:55': \"Was it amethyst? Yeah, you said you liked this before. I sold. I've been wearing it forever. Yeah, Grandma never takes her jewelry off.\",\n",
+       " '0:12:00': \"It's funny because I've had a lot of videos that I've recorded on her where she's like\",\n",
+       " '0:12:05': 'sleeping, and people are like, oh, this is fake. Who sleeps with their jewelry on?',\n",
+       " '0:12:10': 'I do. This woman does. Yeah. Earrings. Everything.',\n",
+       " '0:12:15': \"She never takes anything off. That's it. Yeah. Grandma's just always watching TV, chilling.\",\n",
+       " '0:12:20': \"And I lost my nugget ring. I'm so upset. Nugget ring?\",\n",
+       " '0:12:25': 'The one that I wore on my thumb. Remember when you told me to get it fixed about six months ago?',\n",
+       " '0:12:30': \"Oh, yeah. She's always losing her jewelry. I needed the ring guard on it, and I had that for years.\",\n",
+       " '0:12:35': 'I lost it for three years in a washing machine. And then you found it, and you lost it again.',\n",
+       " '0:12:40': \"And my jeweler fixed it for me, and I've been wearing it ever since.\",\n",
+       " '0:12:45': \"I've been wearing it ever since until it cracked a little. I had to get it soldered or whatever they do.\",\n",
+       " '0:12:50': 'And now I lost the mother fissure. The mother fissure. Okay, you tried to correct. Finally.',\n",
+       " '0:12:55': \"Yeah, you tried to correct one word. Let me see this. Please don't do it while you're driving. No, I'm not going to.\",\n",
+       " '0:13:00': 'Wow, what is this dog?',\n",
+       " '0:13:05': 'Oh! Oh, I just got frostbite from that.',\n",
+       " '0:13:10': 'Potential, almost frostbite. It just dripped on me. Did it?',\n",
+       " '0:13:15': 'No caption',\n",
+       " '0:13:20': \"The couch! Oh, my gosh. It's his couch. It just dripped all around me.\",\n",
+       " '0:13:25': \"It's his couch. It's going to be fine. No, it's not. Don't throw up.\",\n",
+       " '0:13:30': 'Look here, come here. Hold your hand out.',\n",
+       " '0:13:35': 'Look, you put a hole in the couch. How does it put a hole in the couch?',\n",
+       " '0:13:40': 'Look, put your hand out.',\n",
+       " '0:13:45': \"Gio, it's okay. Wow, he's really not happy. Gio, it's okay.\",\n",
+       " '0:13:50': \"It's okay, boy. Gio, calm down.\",\n",
+       " '0:13:55': \"It's okay. It's okay. Good boy.\",\n",
+       " '0:14:00': \"Look, we're at 14 minutes of vlog footage.\",\n",
+       " '0:14:05': 'They are nice. They are nice. What? You want the bone?',\n",
+       " '0:14:10': 'You want the bone? Good boy.',\n",
+       " '0:14:15': 'Well, this has been a very interesting video.',\n",
+       " '0:14:20': 'For free.',\n",
+       " '0:14:25': 'Everybody, hit the thumbs up button right now if you want my mom to give me this couch for free.',\n",
+       " '0:14:30': 'Oh, yeah.',\n",
+       " '0:14:35': \"That's pretty much going to do it for the video, guys. This has been really interesting.\",\n",
+       " '0:14:40': \"Gio, you're hurting my ears. I hope you guys enjoyed. Gio.\",\n",
+       " '0:14:45': 'Bye. Bye. Bye. Bye.',\n",
+       " '0:14:50': 'Bye. Oh, my gosh.',\n",
+       " '0:14:55': \"I'm out. He's following me.\",\n",
+       " '0:15:00': 'Bye, guys.'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import timedelta\n",
+    "\n",
+    "def format_transcription_dict(transcription_dict, interval=5):\n",
+    "    def time_to_seconds(time_str):\n",
+    "        h, m, s = map(int, time_str.split(':'))\n",
+    "        return h * 3600 + m * 60 + s\n",
+    "\n",
+    "    def seconds_to_time(seconds):\n",
+    "        return str(timedelta(seconds=seconds))\n",
+    "\n",
+    "    formatted_transcription_dict = {}\n",
+    "\n",
+    "    trans_times = sorted(transcription_dict.keys(), key=lambda t: time_to_seconds(t))\n",
+    "    trans_times_in_seconds = [time_to_seconds(t) for t in trans_times]\n",
+    "\n",
+    "    current_interval_start = 0\n",
+    "    combined_transcription = []\n",
+    "\n",
+    "    for trans_time, trans_text in zip(trans_times_in_seconds, trans_times):\n",
+    "        while trans_time >= current_interval_start + interval:\n",
+    "            interval_key = seconds_to_time(current_interval_start)\n",
+    "            formatted_transcription_dict[interval_key] = \" \".join(combined_transcription).strip() if combined_transcription else \"No caption\"\n",
+    "            current_interval_start += interval\n",
+    "            combined_transcription = []\n",
+    "\n",
+    "        combined_transcription.append(transcription_dict[trans_text])\n",
+    "\n",
+    "    # Add remaining transcriptions for the last interval\n",
+    "    interval_key = seconds_to_time(current_interval_start)\n",
+    "    formatted_transcription_dict[interval_key] = \" \".join(combined_transcription).strip() if combined_transcription else \"No caption\"\n",
+    "\n",
+    "    return formatted_transcription_dict\n",
+    "\n",
+    "formatted_transcription_dict = format_transcription_dict(transcription_dict)\n",
+    "formatted_transcription_dict\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
